k8s/dosa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dosa-svc
spec:
  selector:
    app: dosaLabel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
