k8s/dosa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dosa-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/ifominykh(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dosa-svc
                port:
                  number: 80
